// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order.tsx empty date 1`] = `""`;

exports[`Order.tsx empty items 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      shop
    </span>
    <span
      id="date"
    />
  </div>
  <div
    className="Order-items"
  >
    <div>
      Заказ пуст...
    </div>
  </div>
</div>
`;

exports[`Order.tsx ok 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      shop
    </span>
    <span
      id="date"
    />
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      1
    </div>
    <div
      className="Order-item"
      key="1"
    >
      2
    </div>
    <div
      className="Order-item"
      key="2"
    >
      3
    </div>
  </div>
</div>
`;
